--- a/apps/asdfasdf.yml
+++ b/apps/asdfasdf.yml
@@ -75,6 +75,55 @@ appTemplate:
                 - notificationDuration: ''
             createdAt: 2020-11-28T23:59:43.005Z
             updatedAt: 2020-11-28T23:59:43.005Z
+      - textinput1:
+          pluginTemplate:
+            id: textinput1
+            type: widget
+            subtype: TextInputWidget
+            template:
+              ordered:
+                - validationMaxlengthValue: ''
+                - readonly: ''
+                - disabledKeyCodes: ''
+                - validationMaxValue: ''
+                - onBlur: ''
+                - currencyType: USD
+                - leftIconName: ''
+                - initialValue: ''
+                - validationMessage: ''
+                - tooltipText: ''
+                - value: ''
+                - suffix: ''
+                - validationMinlengthValue: ''
+                - validationLengthValue: ''
+                - placeholder: Search here...
+                - validationType: ''
+                - label: Name
+                - currencyMajorOnly: false
+                - formattedValue: ''
+                - allowedInputsRegex: ''
+                - labelMaxWidth: ''
+                - enableValidationType: false
+                - labelPlacedOnLeft: false
+                - onSubmit: ''
+                - validationMinValue: ''
+                - lastSubmittedAt: ''
+                - validationState:
+                    object:
+                      required: ''
+                      validationType: ''
+                - type: text
+                - id: textinput1
+                - allowedRegex: ''
+                - required: false
+            position2:
+              position2:
+                row: 5
+                col: 5
+                height: 1
+                width: 4
+            createdAt: 2020-11-28T23:59:59.803Z
+            updatedAt: 2020-11-28T23:59:59.803Z
   urlFragmentDefinitions: []
   pageLoadValueOverrides: []
   customDocumentTitle: ''
