--- a/apps/asdfasdf.yml
+++ b/apps/asdfasdf.yml
@@ -124,6 +124,38 @@ appTemplate:
                 width: 4
             createdAt: 2020-11-28T23:59:59.803Z
             updatedAt: 2020-11-28T23:59:59.803Z
+      - button1:
+          pluginTemplate:
+            id: button1
+            type: widget
+            subtype: ButtonWidget
+            template:
+              ordered:
+                - valueToCopy: ''
+                - color: '#3c92dc'
+                - internalUrlHashParams: ''
+                - exportFileType: csv
+                - buttonType: action
+                - exportTemplate: null
+                - url: ''
+                - newWindow: false
+                - value: Submit
+                - exportQuery: ''
+                - action: ''
+                - internalUrlQuery: ''
+                - internalUrlPath: ''
+                - id: button1
+                - exportFileName: ''
+                - loading: ''
+                - disabled: ''
+            position2:
+              position2:
+                row: 6
+                col: 7
+                height: 1
+                width: 2
+            createdAt: 2020-11-29T19:54:00.861Z
+            updatedAt: 2020-11-29T19:54:00.861Z
   urlFragmentDefinitions: []
   pageLoadValueOverrides: []
   customDocumentTitle: ''
