--- a/apps/asdf.yml
+++ b/apps/asdf.yml
@@ -100,7 +100,32 @@ appTemplate:
                 height: 1
                 width: 3
             createdAt: 2020-11-30T01:08:37.294Z
-            updatedAt: 2020-11-30T01:08:37.294Z
+            updatedAt: 2020-11-30T01:08:37.834Z
+      - text2:
+          pluginTemplate:
+            id: text2
+            type: widget
+            subtype: TextWidget
+            template:
+              ordered:
+                - horizontalAlign: left
+                - truncateOverflow: false
+                - verticalAlign: center
+                - scrollOverflow: false
+                - tooltipText: ''
+                - value: "**Hello** friend! \U0001F603\n\n"
+                - renderAsHtml: false
+                - backgroundColor: '#0000'
+                - textColor: '#312929'
+                - renderAsMarkdown: true
+                - id: text2
+            position2:
+              position2:
+                row: 3
+                height: 1
+                width: 3
+            createdAt: 2020-11-30T01:08:39.487Z
+            updatedAt: 2020-11-30T01:08:39.487Z
   urlFragmentDefinitions: []
   pageLoadValueOverrides: []
   customDocumentTitle: ''
