--- a/apps/asdf.yml
+++ b/apps/asdf.yml
@@ -151,7 +151,33 @@ appTemplate:
                 height: 1
                 width: 3
             createdAt: 2020-11-30T01:08:43.474Z
-            updatedAt: 2020-11-30T01:08:43.474Z
+            updatedAt: 2020-11-30T01:08:44.001Z
+      - text4:
+          pluginTemplate:
+            id: text4
+            type: widget
+            subtype: TextWidget
+            template:
+              ordered:
+                - horizontalAlign: left
+                - truncateOverflow: false
+                - verticalAlign: center
+                - scrollOverflow: false
+                - tooltipText: ''
+                - value: "**Hello** friend! \U0001F603\n\n"
+                - renderAsHtml: false
+                - backgroundColor: '#0000'
+                - textColor: '#312929'
+                - renderAsMarkdown: true
+                - id: text4
+            position2:
+              position2:
+                row: 8
+                col: 1
+                height: 1
+                width: 3
+            createdAt: 2020-11-30T01:08:45.865Z
+            updatedAt: 2020-11-30T01:08:45.865Z
   urlFragmentDefinitions: []
   pageLoadValueOverrides: []
   customDocumentTitle: ''
